--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ node_modules/**/.deps/
 node_modules/**/build/Makefile
 node_modules/**/**/build/Makefile
 
-node_modules
+# node_modules
 gruntfile.js
 package.json
